[gd_scene load_steps=31 format=2]

[ext_resource path="res://Art/Sprites/cop_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Developers/Julian/Cop/Cop.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 50 )

[sub_resource type="CircleShape2D" id=2]
radius = 252.008

[sub_resource type="CircleShape2D" id=3]
radius = 108.227

[sub_resource type="Animation" id=15]
resource_name = "AttackDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=16]
resource_name = "AttackLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=17]
resource_name = "AttackRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=18]
resource_name = "AttackUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=19]
resource_name = "Transform"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "WalkDown"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 8, 11, 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "WalkLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 16, 18, 16 ]
}

[sub_resource type="Animation" id=4]
resource_name = "WalkRight"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 20, 23, 20 ]
}

[sub_resource type="Animation" id=7]
resource_name = "WalkUp"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 12, 15, 12 ]
}

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "AttackLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Transform"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "WalkUp"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "WalkLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=12]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 10 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 11 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Attack/node = SubResource( 24 )
states/Attack/position = Vector2( 549, 115 )
states/Transform/node = SubResource( 25 )
states/Transform/position = Vector2( 311, 227 )
states/Walk/node = SubResource( 12 )
states/Walk/position = Vector2( 311, 115 )
transitions = [ "Walk", "Attack", SubResource( 26 ), "Walk", "Transform", SubResource( 27 ), "Attack", "Walk", SubResource( 28 ) ]
start_node = "Walk"
end_node = "Transform"

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[node name="Cop" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 8
frame = 11
region_rect = Rect2( 0, 0, 304, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="VisionArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea2D"]
shape = SubResource( 2 )

[node name="AttackArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
shape = SubResource( 3 )

[node name="InitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/AttackDown = SubResource( 15 )
anims/AttackLeft = SubResource( 16 )
anims/AttackRight = SubResource( 17 )
anims/AttackUp = SubResource( 18 )
anims/Transform = SubResource( 19 )
anims/WalkDown = SubResource( 5 )
anims/WalkLeft = SubResource( 6 )
anims/WalkRight = SubResource( 4 )
anims/WalkUp = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0.0113269, 0.830508 )
[connection signal="body_entered" from="VisionArea2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="VisionArea2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_AttackArea2D_body_entered"]
[connection signal="body_exited" from="AttackArea2D" to="." method="_on_AttackArea2D_body_exited"]
